--- a/templates/admin-base.html
+++ b/templates/admin-base.html
@@ -9,21 +9,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
-    <style>
-      body {
-          min-height: 100vh;
-          position: relative;
-          /* margin-bottom: 150px; Adjust this value according to your footer height */
-      }
-
-      footer {
-          position: fixed;
-          bottom: 0;
-          width: 100%;
-          padding-top: 10px;
-          padding-bottom: 20px;
-      }
-  </style>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <nav class="navbar navbar-dark bg-dark">
@@ -39,20 +24,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="/about">About</a>
-            <a class="nav-link" href="/about/contact">Contact</a>
-            <a class="nav-link" href="/quote">Get a quote</a>
-            <a class="nav-link" href="/admin">Admin</a>
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              Policies
-            </a>
-            <div class="dropdown-menu">
-              {% for item in nav_dopdown_items %}
-              <a class="dropdown-item" href="/policy/{{ item.id }}">{{ item.name }}</a>
-              {% endfor %}
-            </div>
-            </li>
+            <a class="nav-link" href="/policy-management">Policies</a>
+            <a class="nav-link" href="/customer-management">Customers</a>
+            <a class="nav-link" href="/quote">Claims</a>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
