--- a/templates/quote.html
+++ b/templates/quote.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block body %}
 <div class="container mt-5">
     <div class="text-center">
-        <h2>Contact Us</h2>
+        <h2>Complete your quote</h2>
     </div>
     <div class="row">
         <div class="col-md-6">
@@ -16,7 +16,11 @@
                         <input class="form-control" type="email" id="email" name="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="message">Estimated premuim:</label>
+                        <label for="email">Mobile Number:</label>
+                        <input class="form-control" type="mobile" id="mobile" name="mobile" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Estimated Premuim</label>
                         <label for="premuim">{{premuim}}</label>
                     </div>
                     <button class="btn btn-primary btn-block" type="submit">Submit</button>
@@ -27,6 +31,8 @@
             <div class="bg-light p-4 rounded text-center">
                 <i class="fas fa-phone"></i>
                 <span class="tel">123 456 7890</span>
+                <i class="fa-solid fa-envelope"></i>
+                <span class="tel"> insurance@example.co.za</span>
             </div>
         </div>
     </div>
