--- a/templates/base.html
+++ b/templates/base.html
@@ -56,10 +56,16 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="text-light" href="/user/login"><i class="fa-solid fa-user"></i></a>
+            {% if current_user.is_authenticated %}
+          <form action="{{ url_for('user_bp.logout') }}" method="post">
+            <button type="submit">Logout</button>
+          </form>
+          {% else %}
+           <a class="text-light" href="/user/login">Log in<i class="fa-solid fa-user"></i></a>
+          {% endif %}
           </li>
-         </ul>
-      </div>
+        </ul>
+        </div>
     </nav>
 
 <body>
