--- a/templates/customerdashboard.html
+++ b/templates/customerdashboard.html
@@ -61,7 +61,7 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 d-none d-md-block">
             <div
                 class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <p class="font-size-xl mb-1">Welcome, <span class="font-weight-bold">{{customer.FirstName}}</span></p>
+                <h3 class="font-size-xl mb-1">Welcome, <span class="font-weight-weak">{{customer.FirstName}}</span></h3>
             </div>
             <div class="claims">
                 <h3>Claims</h3>
