--- a/templates/customerdashboard.html
+++ b/templates/customerdashboard.html
@@ -22,8 +22,28 @@
         border: none; 
         background: none;
     }
+
+    .welcome {
+        font-size: 2.5rem;
+    }
 </style>
 {% extends 'base.html' %} {% block body %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <i aria-hidden="true" class="fa-solid fa-xmark"></i>
+      </button>
+      <ul class="list-unstyled">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
+{% endwith %}
+
 <div class="container-fluid">
     <div class="row">
         <nav class="col-md-2 d-md-block bg-light sidebar"> <!-- sidebar -->
@@ -61,23 +81,13 @@
                             </button>
                         </form>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            Claim History
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            Pending Claims
-                        </a>
-                    </li>
                 </ul>
             </div>
         </nav>
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 d-none d-md-block">
             <div
                 class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <p class="font-size-xl mb-1"><span class="font-weight-bold">Welcome</span>, {{customer.FirstName}}</p>
+                <p class="font-size-xl mb-1 welcome"><span class="font-weight-bold">Welcome</span>, {{customer.FirstName}}</p>
             </div>
             <div class="claims">
                 <h3>Claims</h3>
