--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -1,7 +1,23 @@
 <style>
- 
+
 </style>
 {% extends 'base.html' %} {% block body %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <i aria-hidden="true" class="fa-solid fa-xmark"></i>
+      </button>
+      <ul class="list-unstyled">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
+{% endwith %}
+
 <div class="container-fluid">
     <div class="row">
         <nav class="col-md-2 d-md-block bg-light sidebar"> <!-- sidebar -->
@@ -25,7 +41,31 @@
                 </ul>
             </div>
         </nav>
-        <img src="data:image/png;base64,{{ chart_data }}" alt="Chart">
+  
+        <div class="col">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-80" src="data:image/png;base64,{{ bar_chart }}" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-80" src="data:image/png;base64,{{ line_chart }}" alt="Second slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon bg-dark" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon bg-dark" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div></div>
     </div>
-</div>
-{% endblock %}
+    {% endblock %}
