--- a/templates/complete-quote.html
+++ b/templates/complete-quote.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %} {% block body %}
 <div class="container mt-5">
     <div class="text-center">
-        <h2>Contact Us</h2>
+        <h2>Complete your quote</h2>
     </div>
-    <div class="row">
         <div class="col-md">
             <div class="bg-light p-4 rounded">
                 <form action="#" method="post">
@@ -16,22 +15,24 @@
                         <input class="form-control" type="email" id="email" name="email" required>
                     </div>
                     <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea class="form-control" id="message" name="message" required></textarea>
+                        <label for="email">Mobile Number:</label>
+                        <input class="form-control" type="mobile" id="mobile" name="mobile" required>
+                    </div>
+                    <div class="form-group font-weight-bold">
+                        <label for="message">Estimated Premuim</label>
+                        <label for="premuim">R{{premuim}} Per Month</label>
                     </div>
                     <button class="btn btn-primary btn-block" type="submit">Submit</button>
                 </form>
             </div>
-
-
-            <div class="bg-light p-4 rounded text-center">
+     
+            <div class="bg-light p-4 mt-2 rounded text-center">
                 <i class="fas fa-phone"></i>
-                <span class="tel">123 456 7890&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                <span class="tel">123 456 7890</span>
                 <i class="fa-solid fa-envelope"></i>
                 <span class="tel"> insurance@example.co.za</span>
             </div>
         </div>
-    </div>
-</div>
+   
 </div>
 {% endblock %}
