--- a/templates/customer-management.html
+++ b/templates/customer-management.html
@@ -12,6 +12,22 @@
   }
 </style>
 {% extends 'base.html' %} {% block body %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <i aria-hidden="true" class="fa-solid fa-xmark"></i>
+      </button>
+      <ul class="list-unstyled">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
+{% endwith %}
+
 <h3 class="text-center m-3">Customers</h3>
 <div class="mr-2 ml-2">
   <table class="table table-striped table-bordered">
