--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
         text-align: center;
     }
 
-    form {
+    .login {
         background-color: #f2f2f2;
         padding: 20px;
         border-radius: 20px;
@@ -61,10 +61,26 @@
     }
 </style>
 {% extends 'base.html' %} {% block body %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <i aria-hidden="true" class="fa-solid fa-xmark"></i>
+      </button>
+      <ul class="list-unstyled">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
+{% endwith %}
+
 <div class="container">
-    <h1>Login</h1>
+    <h2>Login</h2>
     <!-- action="" -> Submit to current url  -->
-    <form method="POST" action="">
+    <form class="login" method="POST" action="">
         {{form.hidden_tag()}} 
         {% if form.username.errors %} 
         {% for error in form.username.errors %}
