--- a/templates/register-for-policy.html
+++ b/templates/register-for-policy.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-12 text-center">
+            <div class="col-sm-12">
                 <button type="submit" class="btn btn-primary">Apply</button>
             </div>
         </div>
