--- a/templates/register.html
+++ b/templates/register.html
@@ -1,59 +1,80 @@
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
 
-    <style>
-        .register-form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            max-width: 300px;
-            margin: 0 auto;
-        }
-    </style>
+    .container {
+        margin: 70px auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    h3 {
+        text-align: center;
+    }
+
+    .register-form {
+        background-color: #f2f2f2;
+        padding: 20px;
+        border-radius: 20px;
+        width: 50%;
+    }
+
+    a {
+        text-decoration: none;
+    }
+</style>
 {% extends 'base.html' %} {% block body %}
-    <h2>Register</h2>
-    <form class="register-form" action="" method="POST">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.FirstName.label(class="form-control-label") }}
-            {{ form.FirstName(class="form-control") }}
-            {% for error in form.FirstName.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.LastName.label(class="form-control-label") }}
-            {{ form.LastName(class="form-control") }}
-            {% for error in form.LastName.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.PhoneNumber.label(class="form-control-label") }}
-            {{ form.PhoneNumber(class="form-control") }}
-            {% for error in form.PhoneNumber.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.Username.label(class="form-control-label") }}
-            {{ form.Username(class="form-control") }}
-            {% for error in form.Username.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.Email.label(class="form-control-label") }}
-            {{ form.Email(class="form-control") }}
-            {% for error in form.Email.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.Password.label(class="form-control-label") }}
-            {{ form.Password(class="form-control") }}
-            {% for error in form.Password.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <button type="submit" class="btn btn-primary">{{ form.submit.label }}</button>
-    </form>
-    {% endblock %}
+<div class="container">
+<h3>Register</h3>
+<form class="register-form" action="" method="POST">
+    {{ form.hidden_tag() }}
+    <div class="form-group">
+        {{ form.FirstName.label(class="form-control-label") }}
+        {{ form.FirstName(class="form-control") }}
+        {% for error in form.FirstName.errors %}
+        <small class="form-text text-danger">{{ error }}</small>
+        {% endfor %}
+    </div>
+    <div class="form-group">
+        {{ form.LastName.label(class="form-control-label") }}
+        {{ form.LastName(class="form-control") }}
+        {% for error in form.LastName.errors %}
+        <small class="form-text text-danger">{{ error }}</small>
+        {% endfor %}
+    </div>
+    <div class="form-group">
+        {{ form.PhoneNumber.label(class="form-control-label") }}
+        {{ form.PhoneNumber(class="form-control") }}
+        {% for error in form.PhoneNumber.errors %}
+        <small class="form-text text-danger">{{ error }}</small>
+        {% endfor %}
+    </div>
+    <div class="form-group">
+        {{ form.Username.label(class="form-control-label") }}
+        {{ form.Username(class="form-control") }}
+        {% for error in form.Username.errors %}
+        <small class="form-text text-danger">{{ error }}</small>
+        {% endfor %}
+    </div>
+    <div class="form-group">
+        {{ form.Email.label(class="form-control-label") }}
+        {{ form.Email(class="form-control") }}
+        {% for error in form.Email.errors %}
+        <small class="form-text text-danger">{{ error }}</small>
+        {% endfor %}
+    </div>
+    <div class="form-group">
+        {{ form.Password.label(class="form-control-label") }}
+        {{ form.Password(class="form-control") }}
+        {% for error in form.Password.errors %}
+        <small class="form-text text-danger">{{ error }}</small>
+        {% endfor %}
+    </div>
+    <button type="submit" class="btn btn-primary">{{ form.submit.label }}</button>
+</form>
+</div>
+{% endblock %}
