--- a/templates/update-customer.html
+++ b/templates/update-customer.html
@@ -23,22 +23,27 @@
         width: 50%;
     }
 
-    /* input[type="submit"] {
-        background-color: rgb(124, 138, 111);
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        width: 100%;
-        box-sizing: border-box;
-    } */
-
     a {
         text-decoration: none;
     }
 </style>
 {% extends 'base.html' %} {% block body %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <i aria-hidden="true" class="fa-solid fa-xmark"></i>
+      </button>
+      <ul class="list-unstyled">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
+{% endwith %}
+
 <div class="container">
     <h2 class="mb-4">Update Customer</h2>
     <form class="update-form" action="{{ url_for('admin_bp.update_customer_info', CustomerID=customer.CustomerID) }}" method="POST">
