--- a/templates/update-policy-type.html
+++ b/templates/update-policy-type.html
@@ -24,6 +24,22 @@
     }
 </style>
 {% extends 'base.html' %} {% block body %}
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <div class="alert alert-info alert-dismissible fade show" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <i aria-hidden="true" class="fa-solid fa-xmark"></i>
+      </button>
+      <ul class="list-unstyled">
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
+{% endwith %}
+
 <div class="container">
     <h2 class="mb-4">Update Policy Type</h2>
     <form class="update-form"
