Part of documentation

--- a/templates/home.html
+++ b/templates/home.html
@@ -112,8 +112,13 @@
         <div class="row">
             <div class="col text-center">
                 <h2 class="pb-3">About Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod erat nec lorem pulvinar,
-                    vitae molestie libero luctus. Sed non velit nec augue rhoncus placerat vel in magna.</p>
+                <p>At InsuranceCo., we are your trusted partner in various insurance solutions. 
+                    Committed to protecting your rights and providing peace of mind, we offer comprehensive coverage
+                   tailored to meet your legal needs, in addition to our other offerings. 
+                   We are dedicated to delivering excellent service and expert guidance every step of your journey. 
+                  </p>
+                  <p>Our company was founded and is based in Cape Town. With branches in all major cities in Southern Africa.
+                  </p>
             </div>
         </div>
 </section>
@@ -139,8 +144,6 @@
                     <button class="btn btn-primary btn-block" type="submit">Submit</button>
                 </form>
             </div>
-
-
             <div class="bg-light p-4 rounded text-center">
                 <i class="fas fa-phone"></i>
                 <span class="tel">123 456 7890&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
