--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Send title</title>
+  <title> {% block title %}  {% endblock %}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -29,6 +29,10 @@
       border: none;
       background: none;
     }
+
+    a {
+        text-decoration: none;
+    }
   </style>
 </head>
 
@@ -49,7 +53,6 @@
       <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       <a class="nav-link" href="/about">About</a>
       <a class="nav-link" href="/about/contact">Contact</a>
-      <a class="nav-link" href="/quote">Get a quote</a>
       {% if current_user.is_authenticated %}
       <a class="nav-link" href="/user/dashboard">Dashboard</a>
       {% endif %}
@@ -68,11 +71,8 @@
       <li class="nav-item">
         {% if current_user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="/user/dashboard"><i class="fa-solid fa-user"> </i></a>
-      </li>
-      <li class="nav-item">
         <form action="{{ url_for('user_bp.logout') }}" method="post">
-          <button type="submit" class="nav-link">Logout</button>
+          <button type="submit" class="nav-link btn btn-danger">Logout</button>
         </form>
       </li>
       </form>
@@ -110,11 +110,8 @@
     <ul class="navbar-nav">
       {% if current_user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="/admin"><i class="fa-solid fa-user"> </i></a>
-      </li>
-      <li class="nav-item">
         <form action="{{ url_for('user_bp.logout') }}" method="post">
-          <button type="submit" class="nav-link">Logout</button>
+          <button type="submit" class="nav-link btn btn-danger">Logout</button>
         </form>
       </li>
       </form>
