--- a/templates/customer-management.html
+++ b/templates/customer-management.html
@@ -28,7 +28,7 @@
   {% endif %}
 {% endwith %}
 
-<h3 class="text-center m-3">Customers</h3>
+<h3 class="text-center m-3">Users</h3>
 <div class="mr-2 ml-2">
   <table class="table table-striped table-bordered">
     <thead class="thead-dark">
@@ -55,7 +55,6 @@
               <input name="CustomerID" type="text" value="{{customer.CustomerID}}" hidden />
               <button type="submit" class="btn btn-secondary Update">Update</button>
             </form>
-            <button type="button" class="btn btn-info p-2 pt-2 pb-2 just"><i class="fa-solid fa-info"></i></button>
           </div>
         </td>
       </tr>
