--- a/templates/file-claim.html
+++ b/templates/file-claim.html
@@ -1,64 +1,49 @@
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
-
-    .container {
-        margin: 70px auto;
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-items: center;
-    }
-
-    h3 {
-        text-align: center;
-    }
-
-    .update-form {
-        background-color: #f2f2f2;
-        padding: 20px;
-        border-radius: 20px;
-        width: 50%;
-    }
-
     a {
         text-decoration: none;
     }
 </style>
 {% extends 'base.html' %} {% block body %}
-<div class="container">
-    <h3>To file a claim, {{customer.FirstName}}, please fill in the below</h3>
-    <form class="update-form" action="{{ url_for('user_bp.file_claim', CustomerID=customer.CustomerID) }}" method="POST">
-        {{ form.hidden_tag() }}
+<div class="container mt-5 mb-3">
+    <div class="text-center">
+        <h3>To file a claim, {{ customer.FirstName }}, please fill in the below</h3>
+    </div>
+    <div class="row">
+        <div class="col-md">
+            <div class="bg-light p-4 rounded">
+                <form class="update-form" action="{{ url_for('user_bp.file_claim', CustomerID=customer.CustomerID) }}"
+                    method="POST">
+                    {{ form.hidden_tag() }}
 
-        <div class="form-group">
-            {{ form.Policy.label }}
-            {{ form.Policy(class="form-control") }}
+                    <div class="form-group">
+                        {{ form.Policy.label }}
+                        {{ form.Policy(class="form-control") }}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form.date_of_event.label }}
+                        {{ form.date_of_event(class="form-control") }}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form.Description.label }}
+                        {{ form.Description(class="form-control") }}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form.Amount.label }}
+                        {{ form.Amount(class="form-control") }}
+                    </div>
+
+                    <div class="form-group">
+                        {{ form.Date_Filed.label }}
+                        {{ form.Date_Filed(class="form-control") }}
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">File claim</button>
+                </form>
+            </div>
         </div>
-
-        <div class="form-group">
-            {{ form.date_of_event.label }}
-            {{ form.date_of_event(class="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ form.Description.label }}
-            {{ form.Description(class="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ form.Amount.label }}
-            {{ form.Amount(class="form-control") }}
-        </div>
-
-        <div class="form-group">
-            {{ form.Date_Filed.label }}
-            {{ form.Date_Filed(class="form-control") }}
-        </div>
-
-        <button type="submit" class="btn btn-primary">File claim</button>
-    </form>
+    </div>
 </div>
 {% endblock %}
