--- a/templates/update-customer.html
+++ b/templates/update-customer.html
@@ -1,82 +1,63 @@
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-    }
+{% extends 'base.html' %} {% block title %} update details {% endblock %}
 
-    .container {
-        margin: 70px auto;
-        display: grid;
-        grid-template-columns: 1fr;
-        justify-items: center;
-    }
-
-    h2 {
-        text-align: center;
-    }
-
-    .update-form {
-        background-color: #f2f2f2;
-        padding: 20px;
-        border-radius: 20px;
-        width: 50%;
-    }
-
-    a {
-        text-decoration: none;
-    }
-</style>
-{% extends 'base.html' %} {% block body %}
+{% block body %}
 
 {% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <div class="alert alert-info alert-dismissible fade show" role="alert">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+{% if messages %}
+<div class="alert alert-info alert-dismissible fade show" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <i aria-hidden="true" class="fa-solid fa-xmark"></i>
-      </button>
-      <ul class="list-unstyled">
+    </button>
+    <ul class="list-unstyled">
         {% for message in messages %}
-          <li>{{ message }}</li>
+        <li>{{ message }}</li>
         {% endfor %}
-      </ul>
-    </div>
-  {% endif %}
+    </ul>
+</div>
+{% endif %}
 {% endwith %}
 
-<div class="container">
-    <h2 class="mb-4">Update Customer</h2>
-    <form class="update-form" action="{{ url_for('admin_bp.update_customer_info', CustomerID=customer.CustomerID) }}" method="POST">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.FirstName.label(class="form-control-label") }}
-            {{ form.FirstName(class="form-control", value=form.FirstName.data) }}
-            {% for error in form.FirstName.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
+<div class="container mt-5 mb-3">
+    <h3 class="mb-4 text-center">Update Details</h3>
+    <div class="row">
+        <div class="col-md">
+            <div class="bg-light p-4 rounded">
+                <form class="update-form"
+                    action="{{ url_for('admin_bp.update_customer_info', CustomerID=customer.CustomerID) }}"
+                    method="POST">
+                    {{ form.hidden_tag() }}
+                    <div class="form-group">
+                        {{ form.FirstName.label(class="form-control-label") }}
+                        {{ form.FirstName(class="form-control", value=form.FirstName.data) }}
+                        {% for error in form.FirstName.errors %}
+                        <small class="form-text text-danger">{{ error }}</small>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.LastName.label(class="form-control-label") }}
+                        {{ form.LastName(class="form-control", value=form.LastName.data) }}
+                        {% for error in form.LastName.errors %}
+                        <small class="form-text text-danger">{{ error }}</small>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.Email.label(class="form-control-label") }}
+                        {{ form.Email(class="form-control", value=form.Email.data) }}
+                        {% for error in form.Email.errors %}
+                        <small class="form-text text-danger">{{ error }}</small>
+                        {% endfor %}
+                    </div>
+                    <div class="form-group">
+                        {{ form.PhoneNumber.label(class="form-control-label") }}
+                        {{ form.PhoneNumber(class="form-control", value=form.PhoneNumber.data) }}
+                        {% for error in form.PhoneNumber.errors %}
+                        <small class="form-text text-danger">{{ error }}</small>
+                        {% endfor %}
+                    </div>
+                    <button type="submit" class="btn btn-primary">{{ form.submit.label }}</button>
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-            {{ form.LastName.label(class="form-control-label") }}
-            {{ form.LastName(class="form-control", value=form.LastName.data) }}
-            {% for error in form.LastName.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.Email.label(class="form-control-label") }}
-            {{ form.Email(class="form-control", value=form.Email.data) }}
-            {% for error in form.Email.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.PhoneNumber.label(class="form-control-label") }}
-            {{ form.PhoneNumber(class="form-control", value=form.PhoneNumber.data) }}
-            {% for error in form.PhoneNumber.errors %}
-                <small class="form-text text-danger">{{ error }}</small>
-            {% endfor %}
-        </div>
-        <button type="submit" class="btn btn-primary">{{ form.submit.label }}</button>
-    </form>
+    </div>
 </div>
 {% endblock %}
