--- a/templates/view-policies.html
+++ b/templates/view-policies.html
@@ -1,17 +1,22 @@
 <style>
-    body {
-        font-family: Roboto, sans-serif;
-        place-content: center;
+    @media (max-width: 800px) {
+    .expandable {
+      display: none;
     }
+}
 
-    .update-form {
-        background-color: #f2f2f2;
-        padding: 20px;
-        border-radius: 20px;
-        width: 50%;
+@media (max-width: 550px) {
+    .less-expandable {
+      display: none;
     }
+}
 </style>
-{% extends 'base.html' %} {% block body %}
+
+{% extends 'base.html' %} 
+
+{% block title %} view-policies {% endblock %}
+
+{% block body %}
 
 {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -30,27 +35,29 @@
 
 <h3 class="text-center m-3">Your Policies</h3>
 <div class="mr-2 ml-2">
+  <div class="row">
+    <div class="col-md">
     <table class="table table-striped table-bordered">
         <thead class="thead-dark">
             <tr>
-                <th>Policy Type</th>
+                <th class="expandable">Policy Type</th>
                 <th>Item Insured</th>
-                <th>Value of Insurance</th>
-                <th>Date of Activation</th>
+                <th class="less-expandable">Value of Insurance</th>
+                <th class="expandable">Date of Activation</th>
                 <th>Monthly Premuim</th>
-                <th>Status</th>
+                <th class="less-expandable">Status</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             {% for policy in policies %}
             <tr>
-                <td>{{ policy.policy_type.name }}</td>
+                <td class="expandable">{{ policy.policy_type.name }}</td>
                 <td>{{ policy.ItemInsured}}</td>
-                <td>{{ policy.InsuredValue }}</td>
-                <td>{{ policy.DateActive }}</td>
+                <td class="less-expandable">{{ policy.InsuredValue }}</td>
+                <td class="expandable">{{ policy.DateActive }}</td>
                 <td>{{ policy.MonthlyPremium }}</td>
-                <td>{{ policy.Status }}</td>
+                <td class="less-expandable">{{ policy.Status }}</td>
                 <td>
                     <form action="{{url_for('user_bp.delete_policy_by_id')}}" method="POST">
                         <input name="PolicyID" type="text" value="{{policy.PolicyID}}" hidden />
@@ -61,5 +68,7 @@
             {% endfor %}
         </tbody>
     </table>
+</div>
+</div>
 </div>
 {% endblock %}
