--- a/templates/policy.html
+++ b/templates/policy.html
@@ -57,7 +57,7 @@
         }
 </style>
 {% extends 'base.html' %} {% block body %}
-<img src="{{ policy.img }}" alt="{{ policy.alt }}">
+<img src="../static/images/gavel.jpg" alt="{{ policy.alt }}">
 <div class="container">
     <div class="policy-container">
         <div class="policy">
