--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -1,6 +1,3 @@
-<style>
-
-</style>
 {% extends 'base.html' %} {% block body %}
 
 {% with messages = get_flashed_messages() %}
@@ -20,7 +17,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-md-2 d-md-block bg-light sidebar"> <!-- sidebar -->
+        <nav class="col-md-2 d-md-block bg-light sidebar">
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
                     <li class="nav-item">
