--- a/templates/base.html
+++ b/templates/base.html
@@ -10,21 +10,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
+  <link rel="stylesheet" href="../static/styles.css" />
   <style>
-    body {
-      min-height: 100vh;
-      position: relative;
-      margin-bottom: 150px;
-    }
-
-    footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      padding-top: 10px;
-      padding-bottom: 20px;
-    }
-
     .nav-link {
       border: none;
       background: none;
@@ -37,7 +24,7 @@
 </head>
 
 {% if user_role == "user" or not current_user.is_authenticated %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
       <i class="fa-solid fa-skull-crossbones"></i>
@@ -51,7 +38,6 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-link" href="/about">About</a>
       <a class="nav-link" href="/about/contact">Contact</a>
       {% if current_user.is_authenticated %}
       <a class="nav-link" href="/user/dashboard">Dashboard</a>
@@ -86,7 +72,7 @@
 {% endif %}
 
 {% if user_role == "admin" and current_user.is_authenticated %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand" href="#">
       <i class="fa-solid fa-skull-crossbones"></i>
@@ -126,7 +112,7 @@
   {% block body %}
   {% endblock %}
 </body>
-<footer class="bg-dark text-center text-muted pt-2 pb-4"> <!-- py add padding to top and bottom -->
+<footer class="bg-dark text-center text-muted pt-2 pb-4"> 
   <div class="container mt-1 mb-1 p-1">
     <div class="row justify-content-center">
       <div class="col-auto">
@@ -135,12 +121,12 @@
     </div>
   </div>
   <div class="container mt-1 mb-1 p-1"></div>
-  <div class="row justify-content-center"> <!-- icon placed within a row to center horizontally. -->
-    <div class="col-auto"> <!-- Ensure display horizontally. -->
-      <i class="fab fa-instagram-square fa-lg"></i> <!-- fa-lg set size to large -->
+  <div class="row justify-content-center"> 
+    <div class="col-auto">
+      <i class="fab fa-instagram-square fa-lg"></i>
     </div>
     <div class="col-auto">
-      <i class="fab fa-twitter-square fa-lg"></i> <!-- mr is margin -->
+      <i class="fab fa-twitter-square fa-lg"></i>
     </div>
     <div class="col-auto">
       <i class="fab fa-facebook-square fa-lg"></i>
