--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,15 +9,15 @@
                 <form action="#" method="post">
                     <div class="form-group">
                         <label for="name">Your Name:</label>
-                        <input class="form-control" type="text" id="name" name="name" required>
+                        <input class="form-control" type="text" name="name" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Your Email Address:</label>
-                        <input class="form-control" type="email" id="email" name="email" required>
+                        <input class="form-control" type="email" name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="message">Message:</label>
-                        <textarea class="form-control" id="message" name="message" required></textarea>
+                        <textarea class="form-control" name="message" required></textarea>
                     </div>
                     <button class="btn btn-primary btn-block" type="submit">Submit</button>
                 </form>
